@@ -1,3 +1,8 @@
+2008-09-03  Angela Marie Thomas <angela@releasedominatrix.com>
+
+	* gdb.texinfo (Interrupts): Mention TCP interface for
+	sending BREAK.
+
 2008-08-26  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* gdb.texinfo (Commands to Specify Files): Document "remote:"
